--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -379,18 +379,18 @@
  STATE_378: "Los Ángeles"
  STATE_379: "San Francisco"
  STATE_380: "Nuuchiu"
- STATE_381: "Cheyenne"
+ STATE_381: "Ochéthi Šakówiŋ" #Sioux
  STATE_382: "Jefferson"
  STATE_383: "Seguin"
  STATE_384: "Kelly"
  STATE_385: "South Oregon"
  STATE_386: "North Interior"
- STATE_387: "Nez Perce"
- STATE_388: "Blackfoot"
- STATE_389: "Assinibone"
- STATE_390: "Yanktonai"
- STATE_391: "Minnesota"
- STATE_392: "Wazhazhe"
+ STATE_387: "Nimíipuu" #Nez Perce 
+ STATE_388: "Aniyvwiyagi" #Cherokee
+ STATE_389: "Nakóda" #Assiniboine
+ STATE_390: "Chahta" #Choctaw
+ STATE_391: "Haudenosaunee" #Iroquois
+ STATE_392: "Wazhazhe" #Osage
  STATE_393: "Michigan"
  STATE_394: "Ouisconsin"
  STATE_395: "Illinois"
@@ -465,10 +465,10 @@
  STATE_464: "Nova Scotia"
  STATE_465: "New Brunswick"
  STATE_466: "North Quebec"
- STATE_467: "Manitoba"
+ STATE_467: "Anishinaabe" #Ojibwe
  STATE_468: "Saint Lawrence"
- STATE_469: "Saskatchewan"
- STATE_470: "Alberta"
+ STATE_469: "Néhiyaw" #Cree
+ STATE_470: "Niitsitapi" #Blackfoot
  STATE_471: "Caribou"
  STATE_472: "Arctic Territories"
  STATE_473: "British Columbia"
@@ -798,9 +798,9 @@
  STATE_797: "Lago Salado"
  STATE_798: "Alta California"
  STATE_799: "Agraria"
- STATE_800: "Crow"
- STATE_801: "Oglala"
- STATE_802: "Cheyenne"
+ STATE_800: "Apsáalooké" #Crow
+ STATE_801: "Šaawanwaki" #Shawnee
+ STATE_802: "Hinono'eino" #Arapaho
  STATE_803: "Baule"
  STATE_804: "Ouagadougou"
  STATE_805: "Kouroussa"
@@ -891,7 +891,7 @@
  STATE_890: "Oranje Desert"
  STATE_891: "Northport"
  STATE_892: "Gadsden"
- STATE_893: "North Assinwati"
+ STATE_893: "Tsétsêhéstâhese" #Cheyenne
  STATE_894: "Northbasin"
  STATE_895: "East Oregon"
  STATE_896: "Oregon Coast"
