--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -109,7 +109,10 @@
 #36 - FRIESLAND
  VICTORY_POINTS_9335: "Groningen"
 #37 - SJAELLAND
- VICTORY_POINTS_6287: "Copenhagen"
+ VICTORY_POINTS_15640: "Helsingør"
+ VICTORY_POINTS_6287: "København"
+ VICTORY_POINTS_3305: "Nykøbing"
+ VICTORY_POINTS_15635: "Roskilde"
 #38 - NORRLAND
  VICTORY_POINTS_11091: "Gävle"
  VICTORY_POINTS_9088: "Härnösand"
@@ -175,8 +178,9 @@
  VICTORY_POINTS_405: "Bielefeld" 
  VICTORY_POINTS_495: "Dortmund"
  VICTORY_POINTS_6535: "Münster" 
-#58 - SCHLESWIG HOLSTEIN
+#58 - HOLSTEIN
  VICTORY_POINTS_6389: "Kiel"
+ VICTORY_POINTS_6257: "Neumünster"
 #59 - HANNOVER
  VICTORY_POINTS_526: "Braunschweig"
  VICTORY_POINTS_6377: "Hannover"
@@ -278,9 +282,14 @@
  VICTORY_POINTS_3230: "Płock"
 #99 - JUTLAND
  VICTORY_POINTS_6364: "Aarhus"
+ VICTORY_POINTS_399: "Esjberg"
+ VICTORY_POINTS_394: "Fredrikshavn"
 #100 - ICELAND
- VICTORY_POINTS_12674: "Reykjavik"
+ VICTORY_POINTS_12689: "Húsavík"
+ VICTORY_POINTS_12674: "Reykjavík"
 #101 - GREENLAND
+ VICTORY_POINTS_12512: "Frederiksdal"
+ VICTORY_POINTS_14380: "Godthåb"
 #102 - KRAIN
  VICTORY_POINTS_9627: "Laibach"
 #103 - DALMATIA
@@ -301,7 +310,9 @@
 #109 - CROATIA
  VICTORY_POINTS_11581: "Zagreb"
 #110 - OSTLANDET
+ VICTORY_POINTS_15646: "Drammen"
  VICTORY_POINTS_6115: "Kristiania"
+ VICTORY_POINTS_3171: "Sandesund"
 #111 - UUSIMAA
  VICTORY_POINTS_6009: "Borgå"
  VICTORY_POINTS_6186: "Fredrikshamn"
@@ -314,8 +325,9 @@
  VICTORY_POINTS_924: "Santarem"
  VICTORY_POINTS_970: "Setúbal"
 #113 - LEINSTER
- VICTORY_POINTS_303: "Athlone"
+ VICTORY_POINTS_11303: "Cavan"
  VICTORY_POINTS_11293: "Dublin"
+ VICTORY_POINTS_303: "Tullamore"
  VICTORY_POINTS_285: "Wexford"
 #114 - SARDINIA
  VICTORY_POINTS_11773: "Cagliari"
@@ -334,30 +346,32 @@
  VICTORY_POINTS_4135: "Gibraltar"
 #119 - ULSTER
  VICTORY_POINTS_3379: "Belfast"
- VICTORY_POINTS_385: "Londonderry"
+ VICTORY_POINTS_385: "Derry"
 #120 - SCOTTISH HIGHLANDS
  VICTORY_POINTS_9075: "Inverness"
  VICTORY_POINTS_11064: "Scapa Flow"
 #121 - LOTHIAN
  VICTORY_POINTS_9392: "Edinburgh"
- VICTORY_POINTS_6300: "Rosyth"
+ VICTORY_POINTS_6300: "Kilkcardy"
 #122 - WALES
  VICTORY_POINTS_377: "Cardiff"
  VICTORY_POINTS_407: "Swansea"
 #123 - CORNWALL
  VICTORY_POINTS_3463: "Exeter"
  VICTORY_POINTS_540: "Plymouth"
+ VICTORY_POINTS_6526: "Truro"
 #124 - GOTLAND
  VICTORY_POINTS_408: "Visby"
 #125 - EAST ANGLIA
  VICTORY_POINTS_11253: "Cambridge"
+ VICTORY_POINTS_221: "Ipswich"
  VICTORY_POINTS_11221: "Luton"
  VICTORY_POINTS_322: "Norwich"
 #126 - GREATER LONDON AREA
- VICTORY_POINTS_6103: "London"
+ VICTORY_POINTS_11333: "Croydon"
+ VICTORY_POINTS_14497: "Dartford"
  VICTORY_POINTS_11374: "East End-Southend"
- VICTORY_POINTS_9239: "Reading"
- VICTORY_POINTS_11333: "Southwark"
+ VICTORY_POINTS_6103: "London"
 #127 - SUSSEX
  VICTORY_POINTS_11446: "Brighton"  
  VICTORY_POINTS_3501: "Dover"
@@ -365,20 +379,29 @@
  VICTORY_POINTS_9458: "Portsmouth"
  VICTORY_POINTS_507: "Surrey"
 #128 - WEST MIDLANDS
- VICTORY_POINTS_9297: "Birmingham"
+ VICTORY_POINTS_14502: "Birmingham"
+ VICTORY_POINTS_3301: "Shrewsbury"
+ VICTORY_POINTS_7239: "Worchester"
+ VICTORY_POINTS_9297: "Wolverhampton"
 #129 - EAST MIDLANDS
+ VICTORY_POINTS_9250: "Grimsby"
  VICTORY_POINTS_11279: "Leicester"
  VICTORY_POINTS_6237: "Nottingham"
+ VICTORY_POINTS_9322: "Spalding"
 #130 - YORKSHIRE
+ VICTORY_POINTS_14504: "Halifax"
  VICTORY_POINTS_11297: "Hull"
  VICTORY_POINTS_9379: "Leeds"
  VICTORY_POINTS_9315: "Sheffield"
+ VICTORY_POINTS_9269: "York"
 #131 - NORTHERN ENGLAND
  VICTORY_POINTS_351: "Newcastle upon Tyne"
 #132 - LANCASHIRE
  VICTORY_POINTS_6384: "Liverpool"
- VICTORY_POINTS_6318: "Manchester"
+ VICTORY_POINTS_14505: "Manchester"
+ VICTORY_POINTS_6335: "Preston"
 #133 - LANARK
+ VICTORY_POINTS_11218: "Dumfries"
  VICTORY_POINTS_3273: "Glasgow"
 #134 - CONNAUGHT
  VICTORY_POINTS_9303: "Galway"
@@ -386,8 +409,10 @@
 #135 - MUNSTER
  VICTORY_POINTS_7394: "Cork"
  VICTORY_POINTS_11334: "Limerick"
+ VICTORY_POINTS_6405: "Tralee"
 #136 - ABERDEENSHIRE
  VICTORY_POINTS_11136: "Aberdeen"
+ VICTORY_POINTS_3150: "Dundee"
 #137 - CRIMEA
  VICTORY_POINTS_3686: "Sevastopol"
  VICTORY_POINTS_6724: "Simferopol"
@@ -400,14 +425,14 @@
  VICTORY_POINTS_11376: "Ystad"
 #139 - SMÅLAND
  VICTORY_POINTS_211: "Borgholm"
- VICTORY_POINTS_3229: "Döderhultsvik"
  VICTORY_POINTS_9329: "Jönköping"
  VICTORY_POINTS_299: "Kalmar"
+ VICTORY_POINTS_3229: "Oskarhamn"
  VICTORY_POINTS_242: "Växjö"
 #140 - VÄSTERGÖTLAND
  VICTORY_POINTS_383: "Göteborg"
  VICTORY_POINTS_3375: "Mariestad"
- VICTORY_POINTS_295: "Trollhättan"
+ VICTORY_POINTS_295: "Vänersborg"
 #141 - SVEALAND
  VICTORY_POINTS_11082: "Nyköping"
  VICTORY_POINTS_6050: "Stockholm"
@@ -417,14 +442,15 @@
  VICTORY_POINTS_122: "Bergen"
 #143 - TRONDELAG
  VICTORY_POINTS_107: "Namsos"
- VICTORY_POINTS_3022: "Trondheim"
+ VICTORY_POINTS_3022: "Trondhjem"
 #144 - FINNMARK
- VICTORY_POINTS_11050: "Tromsø"
+ VICTORY_POINTS_11050: "Tromsö"
+ VICTORY_POINTS_64: "Vadsö"
 #145 - ALAND
  VICTORY_POINTS_9228: "Mariehamn"
 #146 - KARELIYA
  VICTORY_POINTS_6082: "Lappstrand"
- VICTORY_POINTS_3187: "Serdovol"
+ VICTORY_POINTS_3187: "Sordavala"
  VICTORY_POINTS_9206: "Vyborg"
 #147 - BAY ISLANDS
 #148 - LAPPI
@@ -933,6 +959,7 @@
 #331 - NEWFOUNDLAND
  VICTORY_POINTS_12505: "St. John's"
 #332 - LABRADOR
+ VICTORY_POINTS_12503: "Holton Harbour"
 #333 - SARAWAK
  VICTORY_POINTS_1208: "Kuching"
  VICTORY_POINTS_12283: "Sibu"
@@ -949,7 +976,9 @@
 #337 - FAROE ISLANDS
  VICTORY_POINTS_13003: "Tórshavn"
 #338 - GLOUCESTERSHIRE
+ VICTORY_POINTS_6351: "Bath"
  VICTORY_POINTS_3369: "Bristol"
+ VICTORY_POINTS_6378: "Newport"
 #339 - SMYRNA
  VICTORY_POINTS_928: "Magnesia"
  VICTORY_POINTS_4112: "Smyrna"
@@ -1134,7 +1163,8 @@
  VICTORY_POINTS_15608: "Villa Robledar"
 #380 - NUUCHIU
  VICTORY_POINTS_10651: "Tsé payk"
-#381 - CHEYENNE
+#381 - SIOUX
+ VICTORY_POINTS_4610: "WíyakA"
 #382 - JEFFERSON
  VICTORY_POINTS_13333: "Garden Town"
  VICTORY_POINTS_12024: "Jefferson City"
@@ -1152,14 +1182,15 @@
  VICTORY_POINTS_10198: "Twin Peaks"
  VICTORY_POINTS_10271: "Vancouver"
 #387 - NEZ PERCE
- VICTORY_POINTS_12124: "Coeur d'Alene"
-#388 - BLACKFOOT
- VICTORY_POINTS_4860: "Tonkaliwako"
+ VICTORY_POINTS_12124: "Weyííwsik"
+#388 - CHEROKEE
+ VICTORY_POINTS_4860: "Tsusquagatagi"
 #389 - ASSINIBOINE
- VICTORY_POINTS_10709: "Niwaharit"
-#390 - YANKTONAI
+ VICTORY_POINTS_10709: "Mni Wakan"
+#390 - CHOCTAW
+ VICTORY_POINTS_3719: "Iti Fabvssa"
 #391 - MINNESOTA
- VICTORY_POINTS_1866: "Bde Óta Othúŋwe"
+ VICTORY_POINTS_1866: "Kanáta"
 #392 - WAZHAZHE
  VICTORY_POINTS_11971: "Hpahúska"
  VICTORY_POINTS_1527: "Peouaroua"
@@ -1357,14 +1388,16 @@
  VICTORY_POINTS_4432: "Newcastle"
  VICTORY_POINTS_4285: "Saint John"
 #466 - NORTH QUEBEC
-#467 - MANITOBA
- VICTORY_POINTS_4872: "Winnipeg"
+#467 - OJIBWE
+ VICTORY_POINTS_4872: "Gichitwaa-zaaga'igan"
 #468 - SAINT LAWRENCE
  VICTORY_POINTS_14752: "Lévis"
  VICTORY_POINTS_4305: "Matapédia"
  VICTORY_POINTS_10230: "Nolain"
-#469 - SASKATCHEWAN
-#470 - ALBERTA
+#469 - CREE
+ VICTORY_POINTS_12603: "Nîkânîwak"
+#470 - BLACKFOOT
+ VICTORY_POINTS_7787: "Aksíís"
 #471 - CARIBOU
  VICTORY_POINTS_14277: "Prince Rupert"
 #472 - ARCTIC TERRITORIES
@@ -2199,7 +2232,8 @@
  VICTORY_POINTS_13090: "Ostrov Unalaska"
 #794 - LIKA
  VICTORY_POINTS_11564: "Rijeka"
-#795 - NORTHERN SCHLESWIG
+#795 - SCHLESWIG
+ VICTORY_POINTS_317: "Flensburg"
 #796 - YOOTÓ
  VICTORY_POINTS_10573: "Valle Nocturno"
 #797 - LAGO SALADO
@@ -2211,9 +2245,11 @@
  VICTORY_POINTS_10640: "Acadia"
  VICTORY_POINTS_7780: "Agrarville"
 #800 - CROW
-#801 - OGLALA
- VICTORY_POINTS_1747: "Mni Luzahang"
-#802 - CHEYENNE
+ VICTORY_POINTS_1851: "Bózho'ish"
+#801 - SHAWNEE
+ VICTORY_POINTS_6722: "Chillicothe"
+#802 - ARAPAHO
+ VICTORY_POINTS_1789: "Néébe'íí"
 #803 - BAULE
  VICTORY_POINTS_10803: "Abidjan"
 #804 - OUAGADOUGOU
@@ -2419,7 +2455,8 @@
  VICTORY_POINTS_10327: "Freetown"
  VICTORY_POINTS_10690: "Gadsdenville"
  VICTORY_POINTS_12673: "Liberty"
-#893 - NORTH ASSINWATI
+#893 - CHEYENNE
+ VICTORY_POINTS_1736: "Vóóhe'ėstse"
 #894 - NORTHBASIN
  VICTORY_POINTS_1815: "Quickville"
 #895 - EAST OREGON
@@ -2613,6 +2650,7 @@
 #971 - GRISONS
 #972 - NAUCHATEL
 #973 - CHANNEL ISLANDS
+ VICTORY_POINTS_13359: "Saint Helier"
 #974 - HELIGOLAND
 #975 - PUTAMAYO
 #976 - JAPURA
@@ -2695,16 +2733,21 @@
 #1009 - FYN
  VICTORY_POINTS_3325: "Odense"
 #1010 - BORNHOLM
+ VICTORY_POINTS_6361: "Rønne"
 #1011 - NORDLAND
- VICTORY_POINTS_6071: "Bodø"
+ VICTORY_POINTS_6071: "Bodö"
  VICTORY_POINTS_11157: "Harstad"
  VICTORY_POINTS_192: "Narvik"
 #1012 - ROGALAND
- VICTORY_POINTS_9296: "Halvøen"
+ VICTORY_POINTS_9096: "Arendal"
+ VICTORY_POINTS_9296: "Kristianssand"
  VICTORY_POINTS_53: "Stavanger"
 #1013 - TELEMARK
+ VICTORY_POINTS_6151: "Kragerø"
+ VICTORY_POINTS_6080: "Uvdal"
 #1014 - INNLANDET
  VICTORY_POINTS_3021: "Hamar"
+ VICTORY_POINTS_11028: "Lillehammer"
 #1015 - OSTERGOTLAND
  VICTORY_POINTS_9393: "Linköping"
  VICTORY_POINTS_11380: "Norrköping"
@@ -2715,9 +2758,9 @@
  VICTORY_POINTS_6164: "Karlskoga"
  VICTORY_POINTS_9209: "Örebro"
 #1018 - DALARNA
- VICTORY_POINTS_6093: "Borlänge"
  VICTORY_POINTS_6147: "Mora"
  VICTORY_POINTS_156: "Falun"
+ VICTORY_POINTS_11197: "Säter"
 #1019 - JAMTLAND
  VICTORY_POINTS_9066: "Åre"
  VICTORY_POINTS_46: "Östersund"
@@ -2967,6 +3010,7 @@
 #1174 - BAFFIN ISLAND
 #1175 - QUEEN VICTORIA LAND
 #1176 - ISLE OF MAN
+ VICTORY_POINTS_3311: "Douglas"
 #1177 - GELDERLAND
  VICTORY_POINTS_9403: "Enschede"
 #1184 - NASSAU
@@ -2974,6 +3018,16 @@
  VICTORY_POINTS_9547: "Siegen"
 #1184 - FRANKFURT
  VICTORY_POINTS_14507: "Offenbach"
+#1198 - SHETLAND & ORKNEY
+ VICTORY_POINTS_14356: "Kirwall"
+ VICTORY_POINTS_6196: "Lerwick"
+#1199 - CUMBERLAND
+ VICTORY_POINTS_219: "Carlisle"
+#1200 - OXFORDSHIRE
+ VICTORY_POINTS_6221: "Oxford"
+ VICTORY_POINTS_9239: "Reading"
+#1201 - NORTH WALES
+ VICTORY_POINTS_6363: "Carnarvon"
 #1212 - TABASCO
  VICTORY_POINTS_14466: "San Juan Bautista"
 #1212 - PETEN
@@ -3184,6 +3238,9 @@
  VICTORY_POINTS_7308: "Mana"
 #1405 - LIMBURG
  VICTORY_POINTS_11562: "Maastricht"
+#1421 - DOGGERLAND
+ VICTORY_POINTS_15791: "Nehellanwijk"
+ VICTORY_POINTS_15790: "Port Hesus"
 #1422 - BOHUSLAN
  VICTORY_POINTS_6310: "Uddevalla"
 
@@ -3228,7 +3285,7 @@
  VICTORY_POINTS_11399:0 "Lublin"
  VICTORY_POINTS_6332:0 "Königsberg"
  VICTORY_POINTS_6377:0 "Hannover"
- VICTORY_POINTS_6389:0 "Kiel"
+
  VICTORY_POINTS_6488:0 "Frankfurt"
  VICTORY_POINTS_9517:0 "Stuttgart"
  VICTORY_POINTS_3530:0 "Karlsruhe"
@@ -3254,9 +3311,8 @@
  VICTORY_POINTS_9630:0 "Bozen"
  IST_VICTORY_POINTS_9630:0 "Bolzano"
  ITA_VICTORY_POINTS_9630:0 "Bolzano"
- VICTORY_POINTS_6287:0 "Copenhagen"
- VICTORY_POINTS_3325:0 "Odense"
- VICTORY_POINTS_6364:0 "Aarhus"
+
+
  VICTORY_POINTS_3544:0 "Warsaw"
  VICTORY_POINTS_9427:0 "Krakow"
  VICTORY_POINTS_362:0 "Danzig"
@@ -3455,55 +3511,21 @@
  VICTORY_POINTS_11998:0 "Brindisi"
  VICTORY_POINTS_12066:0 "Catanzaro"
  VICTORY_POINTS_6050:0 "Stockholm"
- VICTORY_POINTS_156:0 "Falun"
- VICTORY_POINTS_383:0 "Göteborg"
- VICTORY_POINTS_9279:0 "Malmö"
- VICTORY_POINTS_11114:0 "Karlstad"
- VICTORY_POINTS_11380:0 "Norrköping"
- VICTORY_POINTS_11215:0 "Karlskrona"
- VICTORY_POINTS_6115:0 "Kristiania"
- VICTORY_POINTS_3021:0 "Hamar"
- VICTORY_POINTS_9296:0 "Halvøen"
- VICTORY_POINTS_107:0 "Namsos"
- VICTORY_POINTS_9127:0 "Ålesund"
- VICTORY_POINTS_53:0 "Stavanger"
- VICTORY_POINTS_11157:0 "Harstad"
- VICTORY_POINTS_6071:0 "Bodø"
- VICTORY_POINTS_11050:0 "Tromsø"
- VICTORY_POINTS_9116:0 "Kirkenes"
- VICTORY_POINTS_192:0 "Narvik"
- VICTORY_POINTS_3022:0 "Trondheim"
- VICTORY_POINTS_122:0 "Bergen"
- VICTORY_POINTS_11105:0 "Helsingfors"
+
+
+
  VICTORY_POINTS_10070:0 "Rabat"
- VICTORY_POINTS_3083:0 "Åbo"
- VICTORY_POINTS_3122:0 "Vasa"
- VICTORY_POINTS_3137:0 "Tammerfors"
- VICTORY_POINTS_9206:0 "Vyborg"
+
  VICTORY_POINTS_3152:0 "Reval"
  VICTORY_POINTS_9221:0 "Dorpat"
  VICTORY_POINTS_9340:0 "Riga"
  VICTORY_POINTS_310:0 "Dvinsk"
- VICTORY_POINTS_1734:0 "Duluth"
- VICTORY_POINTS_4029:0 "Eau Claire"
- VICTORY_POINTS_4166:0 "La Baie des Puants"
- VICTORY_POINTS_12456:0 "Doty"
+
  VICTORY_POINTS_6296:0 "Kovno"
  VICTORY_POINTS_9483:1 "Shavli"
- VICTORY_POINTS_6103:0 "London"
- VICTORY_POINTS_3273:0 "Glasgow"
- VICTORY_POINTS_9297:0 "Birmingham"
 
- VICTORY_POINTS_3369:0 "Bristol"
- VICTORY_POINTS_3379:0 "Belfast"
- VICTORY_POINTS_6384:0 "Liverpool"
- VICTORY_POINTS_9379:0 "Leeds"
 
- VICTORY_POINTS_870:0 "Miamis"
- VICTORY_POINTS_11635:0 "Evansville"
- VICTORY_POINTS_9392:0 "Edinburgh"
- VICTORY_POINTS_11293:0 "Dublin"
- VICTORY_POINTS_7394:0 "Cork"
+
  VICTORY_POINTS_6380:0 "Moscow"
  VICTORY_POINTS_525:0 "Kiyev"
  VICTORY_POINTS_3529:0 "Tsaritsyn"
@@ -3560,10 +3582,7 @@
  VICTORY_POINTS_1321:0 "Thiruvananthapuram"
  VICTORY_POINTS_1238:0 "Kochi"
  VICTORY_POINTS_10152:0 "Nellore"
- VICTORY_POINTS_285:0 "Wexford"
- VICTORY_POINTS_303:0 "Athlone"
- VICTORY_POINTS_11371:0 "Sligo"
- VICTORY_POINTS_385:0 "Londonderry"
+
  VICTORY_POINTS_3672:0 "Grozny"
  VICTORY_POINTS_6727:0 "Akkerman"
  VICTORY_POINTS_3707:0 "Kishinev"
@@ -3606,7 +3625,7 @@
  VICTORY_POINTS_10641:0 "Yakutsk"
  VICTORY_POINTS_10696:0 "Omsk"
  VICTORY_POINTS_11159:1 "Petrozavodsk"
- VICTORY_POINTS_3187:1 "Serdovol"
+
  VICTORY_POINTS_110:1 "Waldai"
  VICTORY_POINTS_187:1 "Bologoye"
  VICTORY_POINTS_2999:1 "Vyshny Volochyok"
@@ -3905,7 +3924,7 @@
  VICTORY_POINTS_1562:0 "San Diego"
  VICTORY_POINTS_1595:0 "Indianapolis"
  VICTORY_POINTS_1690:0 "Spokane"
- VICTORY_POINTS_1747:0 "Mni Luzahang"
+
  VICTORY_POINTS_1770:0 "Des Moines"
 
  VICTORY_POINTS_1836:0 "Bismarck"
@@ -3919,53 +3938,11 @@
  VICTORY_POINTS_4659:0 "Tobolsk"
  VICTORY_POINTS_1845:0 "Tynda"
  VICTORY_POINTS_7816:0 "Verkhneudinsk"
- VICTORY_POINTS_1843:0 "Miami"
- VICTORY_POINTS_1866:0 "Bde Óta Othúŋwe"
 
 
- VICTORY_POINTS_6890:0 "Melbourne"
- VICTORY_POINTS_7138:0 "Charlotte"
- VICTORY_POINTS_7202:0 "Charleston"
- VICTORY_POINTS_7315:0 "Queens City"
- VICTORY_POINTS_7386:0 "Olympia"
- VICTORY_POINTS_7480:0 "Mobile"
- VICTORY_POINTS_7552:0 "Nouvelle Orléans"
 
 
- VICTORY_POINTS_10370:0 "Jackson"
- VICTORY_POINTS_10717:0 "Calhoun, D.D"
- VICTORY_POINTS_11654:0 "Buffalo"
- VICTORY_POINTS_11800:0 "Pittsburgh"
- VICTORY_POINTS_3687:0 "Erie"
- VICTORY_POINTS_12405:0 "Altoona"
- VICTORY_POINTS_11785:0 "Harrisburg"
- VICTORY_POINTS_11799:0 "Allentown"
- VICTORY_POINTS_9708:0 "Syracuse"
- VICTORY_POINTS_3806:0 "Troy"
- VICTORY_POINTS_9693:0 "Albany"
- VICTORY_POINTS_12357:0 "Milwaukee"
 
-
- VICTORY_POINTS_12489:0 "Bayonne"
- VICTORY_POINTS_12501:0 "Adelaide"
- VICTORY_POINTS_12586:0 "Omaha"
- VICTORY_POINTS_12641:0 "Chita"
- VICTORY_POINTS_12735:0 "Birmingham"
- VICTORY_POINTS_492:0 "New Philadelphia"
- VICTORY_POINTS_1453:0 "Baton Rouge"
- VICTORY_POINTS_12498:0 "New Liverpool"
-
- VICTORY_POINTS_3778:0 "Ottawa"
- VICTORY_POINTS_3775:0 "Toronto"
- VICTORY_POINTS_1408:0 "Gastown"
-
-
- VICTORY_POINTS_4345:0 "Montréal"
- VICTORY_POINTS_4872:0 "Winnipeg"
- VICTORY_POINTS_7361:0 "Halifax"
-
- VICTORY_POINTS_12505:0 "St. John's"
- VICTORY_POINTS_4285:0 "Saint John"
 
 
 
@@ -4070,7 +4047,7 @@
  VICTORY_POINTS_12026:0 "Baoding"
  VICTORY_POINTS_377:0 "Cardiff"
  VICTORY_POINTS_495:0 "Dortmund"
- VICTORY_POINTS_540:0 "Plymouth"
+
  VICTORY_POINTS_657:0 "Constanta"
  VICTORY_POINTS_778:0 "Annecy"
  VICTORY_POINTS_890:0 "Düzce"
@@ -4126,7 +4103,7 @@
  VICTORY_POINTS_4189:0 "Macau"
  VICTORY_POINTS_4206:0 "Tel Aviv"
  VICTORY_POINTS_4464:0 "Biloxi"
- VICTORY_POINTS_6300:0 "Rosyth"
+
  VICTORY_POINTS_6524:0 "Erfurt"
  VICTORY_POINTS_6882:0 "Newark"
  VICTORY_POINTS_6973:0 "La Spezia"
@@ -4184,19 +4161,13 @@
  VICTORY_POINTS_6889:0 "Dubrovnik"
  VICTORY_POINTS_9874:0 "Pristina"
  VICTORY_POINTS_9906:0 "Niš"
- VICTORY_POINTS_6237:0 "Nottingham"
- VICTORY_POINTS_9075:0 "Inverness"
- VICTORY_POINTS_9303:0 "Galway"
- VICTORY_POINTS_11334:0 "Limerick"
- VICTORY_POINTS_3463:0 "Exeter"
- VICTORY_POINTS_11253:0 "Cambridge"
- VICTORY_POINTS_11297:0 "Hull"
+
  VICTORY_POINTS_9713:0 "Sacramento"
 
 
  VICTORY_POINTS_11435:0 "Bitburg"
  FRA_VICTORY_POINTS_11435:0 "Bitbourg"
- VICTORY_POINTS_12674:0 "Reykjavik"
+
  VICTORY_POINTS_11746:0 "Adana"
  VICTORY_POINTS_11773:0 "Cagliari"
  VICTORY_POINTS_11833:0 "Livorno"
@@ -4230,7 +4201,7 @@
  VICTORY_POINTS_1960:0 "Nyala"
  VICTORY_POINTS_8103:0 "Fashoda"
  VICTORY_POINTS_10827:0 "El Obeid"
- VICTORY_POINTS_6318:0 "Manchester"
+
  VICTORY_POINTS_9315:0 "Sheffield"
  VICTORY_POINTS_11405:0 "Aleksandrovsk"
  VICTORY_POINTS_9461:0 "Lugansk"
@@ -4271,7 +4242,6 @@
 
 
 
- VICTORY_POINTS_12124:0 "Coeur d'Alene"
  VICTORY_POINTS_1875:0 "Empire City"
  VICTORY_POINTS_10569:0 "Norton"
  VICTORY_POINTS_10595:0 "Ingyang Okablecha"
@@ -4283,13 +4253,13 @@
  VICTORY_POINTS_12250:0 "Dyushambe"
  VICTORY_POINTS_7193:0 "Nicosia"
  VICTORY_POINTS_7335:0 "Karaganda"
- VICTORY_POINTS_10709:0 "Niwaharit"
+
  VICTORY_POINTS_1815:0 "Quickville"
  VICTORY_POINTS_1576:0 "Nukus"
 
  VICTORY_POINTS_2219:0 "Lievelde"
  VICTORY_POINTS_6217:0 "Izhevsk"
- VICTORY_POINTS_11136:0 "Aberdeen"
+
  VICTORY_POINTS_8051:0 "Doha"
  VICTORY_POINTS_12702:0 "Dammam"
  VICTORY_POINTS_5037:0 "Mecca"
@@ -4463,13 +4433,7 @@
  VICTORY_POINTS_6222:0 "Mitava"
  VICTORY_POINTS_3255:0 "Yakovstadt"
  VICTORY_POINTS_6375:0 "Allenstein"
- VICTORY_POINTS_11333:0 "Southwark"
- VICTORY_POINTS_9239:0 "Reading"
- VICTORY_POINTS_11374:0 "East End-Southend"
- VICTORY_POINTS_11221:0 "Luton"
- VICTORY_POINTS_11446:0 "Brighton"  
- VICTORY_POINTS_13070:0 "Medway"
- VICTORY_POINTS_507:0 "Surrey"
+
  VICTORY_POINTS_11853:0 "Erzurum"
  VICTORY_POINTS_6935:0 "Van"
  VICTORY_POINTS_9777:0 "Sivas"
