Swiss Generals & vps
y

--- a/localisation/english/PB_country_specific/PB_Switzerland_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Switzerland_l_english.yml
@@ -7,6 +7,12 @@
   ### LEADERS ###
   SWI_tagsatzung: "Tagsatzung"
   SWI_tagsatzung_leader_desc: " "
+  ### FIELD MARSHALS ###
+  SWI_henri_guisan: "Henri Guisan"
+  SWI_ulrich_sigmund_wille: "Ulrich Sigmund Wille"
+  ### GENERALS ###
+  SWI_johannes_von_muralt: "Johannes von Muralt"
+  SWI_emil_sonderegger: "Emil Sonderegger"
 
 ##########################
 # IDEAS
