--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -468,6 +468,8 @@
  VICTORY_POINTS_11141: "Kuopio"
 #151 - EASTERN SWITZERLAND
  VICTORY_POINTS_663: "Zürich"
+ VICTORY_POINTS_15786: "Sankt Gallen"
+ VICTORY_POINTS_15789: "Schaffhausen"
 #152 - UPPER AUSTRIA
  VICTORY_POINTS_3673: "Klagenfurt"
  VICTORY_POINTS_9665: "Linz"
@@ -2557,6 +2559,7 @@
  VICTORY_POINTS_5166: "Cuzco"
 #940 - ROMANDE
  VICTORY_POINTS_6666: "Geneva"
+ VICTORY_POINTS_13275: "Lausanne"
 #941 - KANSAS
  VICTORY_POINTS_4444: "Forest City"
  VICTORY_POINTS_1806: "New Charleston"
@@ -3236,6 +3239,8 @@
 #1401 - BENGKULU
  VICTORY_POINTS_12138: "Bengkulu"
  VICTORY_POINTS_7308: "Mana"
+#1403 - TICINO
+ VICTORY_POINTS_9600: "Lugano"
 #1405 - LIMBURG
  VICTORY_POINTS_11562: "Maastricht"
 #1421 - DOGGERLAND
