--- a/localisation/english/PB_Useful_Loc_l_english.yml
+++ b/localisation/english/PB_Useful_Loc_l_english.yml
@@ -3,25 +3,75 @@
 
  PB_spacing_tt: " \n"
   ## CHARACTER TOOLTIPS
+ is_currently_hired_loc: "Is currently hired"
+ is_not_currently_hired_loc: "Is not currently hired"
+
+
  PB_character_becomes_country_leader_tt: "§Y[THIS.GetName]§! becomes leader of §Y[PREV.GetNameWithFlag]§!"
  PB_kill_character_tt: "§Y[THIS.GetName]§! dies"
- is_hired_as_head_of_government_tt: "Is currently hired as §H$head_of_government$§!"
- is_hired_as_economic_minister_tt: "Is currently hired as §H$economics_minister$§!"
- is_hired_as_foreign_minister_tt: "Is currently hired as §H$foreign_minister$§!"
- is_hired_as_interior_minister_tt: "Is currently hired as §H$internal_minister$§!"
- is_hired_as_special_minister_tt: "Is currently hired as §H$special_minister$§!"
- is_hired_as_army_chief_tt: "Is currently hired as §H$army_chief$§!"
- is_hired_as_navy_chief_tt: "Is currently hired as §H$navy_chief$§!"
- is_hired_as_airforce_chief_tt: "Is currently hired as §H$air_chief$§!"
- is_hired_as_theorist_tt: "Is currently hired as §H$theorist$§!"
- is_hired_as_high_command_tt: "Is currently hired as §H$high_command$§!"
- is_hired_in_cabinet_tt: "Is currently hired in §H$cabinet$§!"
- is_hired_as_military_staff_tt: "Is currently hired as §H$military_staff$§!"
- is_hired_as_military_advisor_tt: "Is currently hired as §HMilitary Advisor§!"
+
+ is_hired_as_head_of_government_tt: "$is_currently_hired_loc$ as §H$head_of_government$§!"
+ is_hired_as_head_of_government_tt_NOT: "$is_not_currently_hired_loc$ as §H$head_of_government$§!"
+ 
+ is_hired_as_economic_minister_tt: "$is_currently_hired_loc$ as §H$economics_minister$§!"
+ is_hired_as_economic_minister_tt_NOT: "$is_not_currently_hired_loc$ as §H$economics_minister$§!"
+ 
+ is_hired_as_foreign_minister_tt: "$is_currently_hired_loc$ as §H$foreign_minister$§!"
+ is_hired_as_foreign_minister_tt_NOT: "$is_not_currently_hired_loc$ as §H$foreign_minister$§!"
+ 
+ is_hired_as_interior_minister_tt: "$is_currently_hired_loc$ as §H$internal_minister$§!"
+ is_hired_as_interior_minister_tt_NOT: "$is_not_currently_hired_loc$ as §H$internal_minister$§!"
+ 
+ is_hired_as_special_minister_tt: "$is_currently_hired_loc$ as §H$special_minister$§!"
+ is_hired_as_special_minister_tt_NOT: "$is_not_currently_hired_loc$ as §H$special_minister$§!"
+ 
+ is_hired_as_army_chief_tt: "$is_currently_hired_loc$ as §H$army_chief$§!"
+ is_hired_as_army_chief_tt_NOT: "$is_not_currently_hired_loc$ as §H$army_chief$§!"
+ 
+ is_hired_as_navy_chief_tt: "$is_currently_hired_loc$ as §H$navy_chief$§!"
+ is_hired_as_navy_chief_tt_NOT: "$is_not_currently_hired_loc$ as §H$navy_chief$§!"
+ 
+ is_hired_as_airforce_chief_tt: "$is_currently_hired_loc$ as §H$air_chief$§!"
+ is_hired_as_airforce_chief_tt_NOT: "$is_not_currently_hired_loc$ as §H$air_chief$§!"
+ 
+ is_hired_as_theorist_tt: "$is_currently_hired_loc$ as §H$theorist$§!"
+ is_hired_as_theorist_tt_NOT: "$is_not_currently_hired_loc$ as §H$theorist$§!"
+ 
+ is_hired_as_high_command_tt: "$is_currently_hired_loc$ as §H$high_command$§!"
+ is_hired_as_high_command_tt_NOT: "$is_not_currently_hired_loc$ as §H$high_command$§!"
+ 
+ is_hired_in_cabinet_tt: "$is_currently_hired_loc$ in §H$cabinet$§!"
+ is_hired_in_cabinet_tt_NOT: "$is_not_currently_hired_loc$ in §H$cabinet$§!"
+ 
+ is_hired_as_military_staff_tt: "$is_currently_hired_loc$ as §H$military_staff$§!"
+ is_hired_as_military_staff_tt_NOT: "$is_not_currently_hired_loc$ as §H$military_staff$§!"
+ 
+ is_hired_as_military_advisor_tt: "$is_currently_hired_loc$ as §HMilitary Advisor§!"
+ is_hired_as_military_advisor_tt_NOT: "$is_not_currently_hired_loc$ as §HMilitary Advisor§!"
+
+
   ## IDEOLOGY TOOLTIPS
- has_far_right_government_group_tt: "Country is in §gFar-Right§! ideologial group:\n - §gNeo-Imperialistm§!\n - §gDespotism§!\n - §gFar-Right Reactionarism§!\n - §gFar-Right Anarcho-Liberalism§!"
- has_democratic_government_group_tt: "Country is in §2Democratic§! ideologial group:\n - §2Conservatism§!\n - §2Democratic Anarcho-Liberalism§!\n - §2Democratic Reactionarism§!\n - §2Democratic Liberalism§!\n - §2Democratic Egalitarism§!"
- has_jacobin_government_group_tt: "Country is in §OJacobin§! ideologial group:\n - §OJacobinism§!\n - §OJacobin Liberalism§!\n - §OJacobin Egalitarism§!"
+ is_in_ideologic_group: "Country is in"
+ is_not_in_ideologic_group: "Country is not in"
+
+ has_far_right_government_group_tt: "$is_in_ideologic_group$ §gFar-Right§! ideologial group:\n - §gNeo-Imperialistm§!\n - §gDespotism§!\n - §gFar-Right Reactionarism§!\n - §gFar-Right Anarcho-Liberalism§!"
+ has_far_right_government_group_tt_NOT: "$is_not_in_ideologic_group$ §gFar-Right§! ideologial group:\n - §gNeo-Imperialistm§!\n - §gDespotism§!\n - §gFar-Right Reactionarism§!\n - §gFar-Right Anarcho-Liberalism§!"
+
+ has_democratic_government_group_tt: "$is_in_ideologic_group$ §2Democratic§! ideologial group:\n - §2Conservatism§!\n - §2Democratic Anarcho-Liberalism§!\n - §2Democratic Reactionarism§!\n - §2Democratic Liberalism§!\n - §2Democratic Egalitarism§!"
+ has_democratic_government_group_tt_NOT: "$is_not_in_ideologic_group$ §2Democratic§! ideologial group:\n - §2Conservatism§!\n - §2Democratic Anarcho-Liberalism§!\n - §2Democratic Reactionarism§!\n - §2Democratic Liberalism§!\n - §2Democratic Egalitarism§!"
+
+ has_jacobin_government_group_tt: "$is_in_ideologic_group$ §OJacobin§! ideologial group:\n - §OJacobinism§!\n - §OJacobin Liberalism§!\n - §OJacobin Egalitarism§!"
+ has_jacobin_government_group_tt_NOT: "$is_not_in_ideologic_group$ §OJacobin§! ideologial group:\n - §OJacobinism§!\n - §OJacobin Liberalism§!\n - §OJacobin Egalitarism§!"
+
+
+
+
+
+
+
+
+
+
   ## ABILITIES WILL BE HERE UNTIL I RESOLVE WHY THEY DONT WORK IN A DEDICATED FILE
   AME_ABILITY_UNDYING_PATRIOTISM: "Undying Patriotism"
   PB_AME_Undying_Patriotism_tt: "Unlocks the §HUndying Patriotism§! ability, which is an improved version of the §YForce Attack§!  ability\n\n"
