--- a/localisation/english/PB_country_specific/PB_Swedish_Australia_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Swedish_Australia_l_english.yml
@@ -5,9 +5,9 @@
   ######################
 
   ### LEADERS ###
-  SLK_adolph_olson_eberhart: "Adolph Olson Eberhart"
-  SLK_floyd_b_olson: "Floyd B. Olson"
+  SLK_adolph_eberhart: "Adolph Olson Eberhart"
+  SLK_floyd_olson: "Floyd B. Olson"
   
   ### GENERALS ###
-  SLK_carl_evert_nathorst: "Carl Evert Nathorst"
+  SLK_carl_nathorst: "Carl Evert Nathorst"
 
