--- a/localisation/english/PB_annexations.yml
+++ b/localisation/english/PB_annexations.yml
@@ -20,6 +20,9 @@
 
   annexation_decision_portugal: "The Fate of Portugal"
   annexation_decision_portugal_desc: "The region of Portugal has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+
+  annexation_portugal: "T"
+  annexation_portugal_desc: ""
   annexation.1016.a: "Establish a Portuguese Republic"
   annexation.1016.b: "Restore the Portuguese Braganza Monarchy"
   annexation.1016.c: "Return it to the Exiled Monarchy"
