--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -427,20 +427,20 @@
     HUN_cn_ADJ:0 "Hungarian"
     HUN_an_ADJ:0 "Hungarian"
 
-    SER_ni:0 "Kingdom of Greater Serbia"
-    SER_ni_DEF:0 "The Kingdom of Greater Serbia"
+    SER_ni:0 "Kingdom of Serbia & Montenegro"
+    SER_ni_DEF:0 "The Kingdom of Serbia & Montenegro"
     SER_ds:0 "Kingdom of Serbia and Montenegro"
     SER_ds_DEF:0 "The Kingdom of Serbia and Montenegro"
-    SER_rc:0 "Kingdom of Greater Serbia"
-    SER_rc_DEF:0 "The Kingdom of Greater Serbia"
-    SER_an:0 "Kingdom of Greater Serbia "
-    SER_an_DEF:0 "The Kingdom of Greater Serbia"
+    SER_rc:0 "Kingdom of Serbia & Montenegro"
+    SER_rc_DEF:0 "The Kingdom of Serbia & Montenegro"
+    SER_an:0 "Kingdom of Serbia & Montenegro"
+    SER_an_DEF:0 "The Kingdom of Serbia & Montenegro"
     SER_cn:0 "Kingdom of Serbia & Montenegro"
     SER_cn_DEF:0 "The Kingdom of Serbia and Montenegro"
-    SER_lb:0 "Kingdom of Greater Serbia"
-    SER_lb_DEF:0 "The Kingdom of Greater Serbia"
-    SER_ss:0 "Kingdom of Greater Serbia"
-    SER_ss_DEF:0 "The Kingdom of Greater Serbia"
+    SER_lb:0 "Kingdom of Serbia & Montenegro"
+    SER_lb_DEF:0 "The Kingdom of Serbia & Montenegro"
+    SER_ss:0 "Kingdom of Serbia & Montenegro"
+    SER_ss_DEF:0 "The Kingdom of Serbia & Montenegro"
     SER_jc:0 "Serbian Republic"
     SER_jc_DEF:0 "The Serbian Republic"
     SER_ni_ADJ:0 "Serbian"
@@ -452,19 +452,19 @@
     SER_cn_ADJ:0 "Serbian"
     SER_an_ADJ:0 "Serbian"
 
-    BUL_ni:0 "Bulgaria"
+    BUL_ni:0 "Tsardom of Bulgaria"
     BUL_ni_DEF:0 "The Tsardom of Bulgaria"
-    BUL_ds:0 "Bulgaria"
+    BUL_ds:0 "Tsardom of Bulgaria"
     BUL_ds_DEF:0 "The Tsardom of Bulgaria"
-    BUL_rc:0 "Bulgaria"
+    BUL_rc:0 "Tsardom of Bulgaria"
     BUL_rc_DEF:0 "The Tsardom of Bulgaria"
-    BUL_an:0 "Bulgaria "
+    BUL_an:0 "Tsardom of Bulgaria"
     BUL_an_DEF:0 "The Tsardom of Bulgaria"
-    BUL_cn:0 "Bulgaria"
+    BUL_cn:0 "Tsardom of Bulgaria"
     BUL_cn_DEF:0 "The Tsardom of Bulgaria"
-    BUL_lb:0 "Bulgaria"
+    BUL_lb:0 "Tsardom of Bulgaria"
     BUL_lb_DEF:0 "The Tsardom of Bulgaria"
-    BUL_ss:0 "Bulgaria"
+    BUL_ss:0 "Tsardom of Bulgaria"
     BUL_ss_DEF:0 "The Tsardom of Bulgaria"
     BUL_jc:0 "Bulgarian Republic"
     BUL_jc_DEF:0 "The Bulgarian Republic"
@@ -477,30 +477,30 @@
     BUL_cn_ADJ:0 "Bulgarian"
     BUL_an_ADJ:0 "Bulgarian"
 
-    ROM_ni:0 "Kingdom of Romania"
-    ROM_ni_DEF:0 "The Kingdom of Romania"
-    ROM_ds:0 "Kingdom of Romania"
-    ROM_ds_DEF:0 "The Kingdom of Romania"
-    ROM_rc:0 "Kingdom of Romania"
-    ROM_rc_DEF:0 "The Kingdom of Romania"
-    ROM_an:0 "Kingdom of Romania "
-    ROM_an_DEF:0 "The Kingdom of Romania"
-    ROM_cn:0 "Duchy of Wallachia"
-    ROM_cn_DEF:0 "The Duchy of Wallachia"
-    ROM_lb:0 "Kingdom of Romania"
-    ROM_lb_DEF:0 "The Kingdom of Romania"
-    ROM_ss:0 "Kingdom of Romania"
-    ROM_ss_DEF:0 "The Kingdom of Romania"
-    ROM_jc:0 "Romanian Republic"
-    ROM_jc_DEF:0 "The Romanian Republic"
-    ROM_ni_ADJ:0 "Romanian"
-    ROM_rc_ADJ:0 "Romanian"
-    ROM_lb_ADJ:0 "Romanian"
-    ROM_ss_ADJ:0 "Romanian"
-    ROM_jc_ADJ:0 "Romanian"
-    ROM_ds_ADJ:0 "Romanian"
-    ROM_cn_ADJ:0 "Romanian"
-    ROM_an_ADJ:0 "Romanian"
+    ROM_ni:0 "Wallachian Principality"
+    ROM_ni_DEF:0 "The Wallachian Principality"
+    ROM_ds:0 "Wallachian Principality"
+    ROM_ds_DEF:0 "The Wallachian Principality"
+    ROM_rc:0 "Wallachian Principality"
+    ROM_rc_DEF:0 "The Wallachian Principality"
+    ROM_an:0 "Wallachian Principality "
+    ROM_an_DEF:0 "The Wallachian Principality"
+    ROM_cn:0 "Wallachian Principality"
+    ROM_cn_DEF:0 "The Wallachian Principality"
+    ROM_lb:0 "Wallachian Principality"
+    ROM_lb_DEF:0 "The Wallachian Principality"
+    ROM_ss:0 "Wallachian Principality"
+    ROM_ss_DEF:0 "The Wallachian Principality"
+    ROM_jc:0 "Wallachian Principality"
+    ROM_jc_DEF:0 "The Wallachian Principality"
+    ROM_ni_ADJ:0 "Wallachian"
+    ROM_rc_ADJ:0 "Wallachian"
+    ROM_lb_ADJ:0 "Wallachian"
+    ROM_ss_ADJ:0 "Wallachian"
+    ROM_jc_ADJ:0 "Wallachian"
+    ROM_ds_ADJ:0 "Wallachian"
+    ROM_cn_ADJ:0 "Wallachian"
+    ROM_an_ADJ:0 "Wallachian"
 
     POL_ni:0 "Poland"
     POL_ni_DEF:0 "The New Kingdom of Poland"
@@ -8832,12 +8832,12 @@
     DAL_DEF:0 "the Republic of Ragusa"
     DAL_ADJ:0 "Ragusan"
 
-    SLA:0 "Habsburg Kingdom of the South Slavs"
-    SLA_DEF:0 "The Habsburg Kingdom of the South Slavs"
-    SLA_ADJ:0 "Slavonian"
+    SLA:0 "Dinaric Kingdom"
+    SLA_DEF:0 "The Dinaric Kingdom"
+    SLA_ADJ:0 "Southern Slavic"
 
-    ION:0 "United States of the Ionian Islands"
-    ION_DEF:0 "the United States of the Ionian Islands"
+    ION:0 "Ionian Islands Protectorate"
+    ION_DEF:0 "The Ionian Islands Protectorate"
     ION_ADJ:0 "Ionian"
 
     TVI:0 "Dominion of Terravictoria"
