--- a/localisation/english/PB_country_specific/PB_Switzerland_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Switzerland_l_english.yml
@@ -7,6 +7,7 @@
   ### LEADERS ###
   SWI_tagsatzung: "Tagsatzung"
   SWI_tagsatzung_leader_desc: " "
+  SWI_heinrich_haberlin: "Heinrich Haberlin"
   ### FIELD MARSHALS ###
   SWI_henri_guisan: "Henri Guisan"
   SWI_ulrich_sigmund_wille: "Ulrich Sigmund Wille"
@@ -39,11 +40,18 @@
   PB_SWI_waning_associates: "Waning Associates"
   PB_SWI_waning_associates_desc: "The associates of the Swiss Confederacy date all the way back to the middle ages, and are a series of Cantons on the fringes of the confederacy that technically aren’t part of the confederacy. Their citizens do have Swiss citizenship, and the Swiss army defends them, but they could theoretically disband the association treaty and become fully independent cantons and join other nations, like Neuchatel and Jura. This divide between these loosely affiliated cantons and the federal diet may not seem big on a cultural level, but economically the cantons have basically free reign and do not have to adhere to decisions of the Federal Diet if they don't wish to. The cantons in the confederacy are currently divided whether these associates should be able to properly join the confederacy or not."
 
-  PB_SWI_databank_world: "Databank of the World"
+  PB_SWI_databank_world: "The World Databank"
   PB_SWI_databank_world_desc: "WIP"
 
+  PB_SWI_databank_world_2: "The Broken Databank"
+  PB_SWI_databank_world_2_desc: "WIP"
+
+  PB_SWI_databank_world_3: "The Leaking Databank"
+  PB_SWI_databank_world_3_desc: "WIP"
+
   PB_SWI_confederation: "Swiss Confederacy"
-  PB_SWI_landknechts: "Mercenary Haven"
+
+  ### CIVIL WAR ###
 
   SWI_PROTESTANT: "Swiss Loyalists"
   SWI_PROTESTANT_DEF: "the Swiss Loyalists"
@@ -53,6 +61,37 @@
   SWI_CATHOLIC_DEF: "the Catholic Revolt"
   SWI_CATHOLIC_ADJ: "Swiss"
 
-  swiss.1.t: "Automation Crisis Hits Switzerland"
+###############
+### EVENTS 
+###############
+
+  swiss.1.t: "Tagsatzung Elections"
   swiss.1.d: "WIP"
-  swiss.1.a: "The banks won't like this!"
+  swiss.1.a: "Stick with Heinrich!"
+  swiss.1.b: "Motta's second chance!"
+  swiss.1.c: "The wild card!"
+
+###############
+### FOCUS TREE
+###############
+
+SWI_33_elections: "The 1933 Elections Have Concluded"
+SWI_auto_crisis: "The Automation Crisis Has Hit Switzerland"
+
+PB_SWI_elections: "Elections of 33'"
+PB_SWI_elections_desc: ""
+
+PB_SWI_snb_victory: "The SNB Stays"
+PB_SWI_snb_victory_desc: ""
+
+PB_SWI_scl_victory: "SCL-BGBP Victory"
+PB_SWI_scl_victory_desc: ""
+
+PB_SWI_ke_victory: "KE-SLP Victory"
+PB_SWI_ke_victory_desc: ""
+
+PB_SWI_automation_crisis: "The Automation Crisis Hits"
+PB_SWI_automation_crisis_desc: ""
+
+PB_SWI_automation_crisis_2: "Fixin' The Holes"
+PB_SWI_automation_crisis_2_desc: ""
