some more triggers

--- a/localisation/english/PB_Game_Rules_l_english.yml
+++ b/localisation/english/PB_Game_Rules_l_english.yml
@@ -127,6 +127,11 @@
   RULE_OPTION_STT_MULTIPLAYER_DESC: "This version of the §HState Transfer Tool§! works similar to the single player version, buy only states belonging to the player or one of their puppets (with some exceptions) may be marked. No manipulating cores, claims or DMZs."
   RULE_OPTION_STT_MP_NO_SUBJECT: "Multiplayer - No Subject Transfer"
   RULE_OPTION_STT_MP_NO_SUBJECT_DESC: "Works the same as the multiplayer version, but subject states can't be marked."
+
+  ### VANILLA RULES ADDITIONS ###
+  RULE_OPTION_SAME_GOVERNMENT_GROUP: "Same Ideological Group Only"
+  RULE_ALLOW_VOLUNTEERS_SAME_GOVERNMENT_GROUP_DESC: "Countries may only send Volunteers to countries that are in the same Ideological Group.\nNote: there are three ideological groups - §gFar-Right§!, §2Democratic§! and §OJacobin§!. A country's affiliation with an ideological group §Hdepends on the leader's subideology§!. §RAdditionally, different sub-ideologies of the same ideology can belong to two different groups§!."
+  RULE_VOLUNTEERS_SAME_GOVERNMENT_GROUP_TT: "Game Rule: §RCountries may only send Volunteers to countries that are in the same Ideological Group.§!"
   
   # technically not game rules but whatev
   custom_diff_strong_sca: "Strengthen Second Continental Army"
