--- a/localisation/english/PB_Useful_Loc_l_english.yml
+++ b/localisation/english/PB_Useful_Loc_l_english.yml
@@ -54,14 +54,21 @@
  is_in_ideologic_group: "Country is in"
  is_not_in_ideologic_group: "Country is not in"
 
- has_far_right_government_group_tt: "$is_in_ideologic_group$ §gFar-Right§! ideologial group:\n - §gNeo-Imperialistm§!\n - §gDespotism§!\n - §gFar-Right Reactionarism§!\n - §gFar-Right Anarcho-Liberalism§!"
- has_far_right_government_group_tt_NOT: "$is_not_in_ideologic_group$ §gFar-Right§! ideologial group:\n - §gNeo-Imperialistm§!\n - §gDespotism§!\n - §gFar-Right Reactionarism§!\n - §gFar-Right Anarcho-Liberalism§!"
+ far_right_ideological_group_text: "§g(Far-Right)§!"
+ democratic_ideological_group_text: "§2(Democratic)§!"
+ jacobin_ideological_group_text: "§O(Jacobin)§!"
 
- has_democratic_government_group_tt: "$is_in_ideologic_group$ §2Democratic§! ideologial group:\n - §2Conservatism§!\n - §2Democratic Anarcho-Liberalism§!\n - §2Democratic Reactionarism§!\n - §2Democratic Liberalism§!\n - §2Democratic Egalitarism§!"
- has_democratic_government_group_tt_NOT: "$is_not_in_ideologic_group$ §2Democratic§! ideologial group:\n - §2Conservatism§!\n - §2Democratic Anarcho-Liberalism§!\n - §2Democratic Reactionarism§!\n - §2Democratic Liberalism§!\n - §2Democratic Egalitarism§!"
+ has_same_government_group_tt: "$is_in_ideologic_group$ §Hthe same ideological group§! [GetGovernmentIdeologyGroup] as §Y[ROOT.GetFlag] [ROOT.GetNameDef]§!\n"
+ has_same_government_group_tt_NOT: "$is_not_in_ideologic_group$ §Hthe same ideological group§! [GetGovernmentIdeologyGroup] as §Y[ROOT.GetFlag] [ROOT.GetNameDef]§!\n"
 
- has_jacobin_government_group_tt: "$is_in_ideologic_group$ §OJacobin§! ideologial group:\n - §OJacobinism§!\n - §OJacobin Liberalism§!\n - §OJacobin Egalitarism§!"
- has_jacobin_government_group_tt_NOT: "$is_not_in_ideologic_group$ §OJacobin§! ideologial group:\n - §OJacobinism§!\n - §OJacobin Liberalism§!\n - §OJacobin Egalitarism§!"
+ has_far_right_government_group_tt: "$is_in_ideologic_group$ §gFar-Right§! ideological group:\n - §gNeo-Imperialistm§!\n - §gDespotism§!\n - §gFar-Right Reactionarism§!\n - §gFar-Right Anarcho-Liberalism§!"
+ has_far_right_government_group_tt_NOT: "$is_not_in_ideologic_group$ §gFar-Right§! ideological group:\n - §gNeo-Imperialistm§!\n - §gDespotism§!\n - §gFar-Right Reactionarism§!\n - §gFar-Right Anarcho-Liberalism§!"
+
+ has_democratic_government_group_tt: "$is_in_ideologic_group$ §2Democratic§! ideological group:\n - §2Conservatism§!\n - §2Democratic Anarcho-Liberalism§!\n - §2Democratic Reactionarism§!\n - §2Democratic Liberalism§!\n - §2Democratic Egalitarism§!"
+ has_democratic_government_group_tt_NOT: "$is_not_in_ideologic_group$ §2Democratic§! ideological group:\n - §2Conservatism§!\n - §2Democratic Anarcho-Liberalism§!\n - §2Democratic Reactionarism§!\n - §2Democratic Liberalism§!\n - §2Democratic Egalitarism§!"
+
+ has_jacobin_government_group_tt: "$is_in_ideologic_group$ §OJacobin§! ideological group:\n - §OJacobinism§!\n - §OJacobin Liberalism§!\n - §OJacobin Egalitarism§!"
+ has_jacobin_government_group_tt_NOT: "$is_not_in_ideologic_group$ §OJacobin§! ideological group:\n - §OJacobinism§!\n - §OJacobin Liberalism§!\n - §OJacobin Egalitarism§!"
 
 
 
